--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
