--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.4.1"
   },
