--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "sequelize-auto": "^0.8.8"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
